@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.common.utils.tls;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -90,7 +89,7 @@ public class RenewableTlsUtilsTest {
   public void setUp()
       throws IOException, URISyntaxException {
     copyResourceFilesToTempFolder(
-        ImmutableMap.of(TLS_KEYSTORE_FILE, TLS_KEYSTORE_FILE, TLS_TRUSTSTORE_FILE, TLS_TRUSTSTORE_FILE));
+        Map.of(TLS_KEYSTORE_FILE, TLS_KEYSTORE_FILE, TLS_TRUSTSTORE_FILE, TLS_TRUSTSTORE_FILE));
   }
 
   private static void copyResourceFilesToTempFolder(Map<String, String> srcAndDestFileMap)
@@ -356,7 +355,7 @@ public class RenewableTlsUtilsTest {
 
     // update tls files
     copyResourceFilesToTempFolder(
-        ImmutableMap.of(TLS_KEYSTORE_UPDATED_FILE, TLS_KEYSTORE_FILE, TLS_TRUSTSTORE_UPDATED_FILE,
+        Map.of(TLS_KEYSTORE_UPDATED_FILE, TLS_KEYSTORE_FILE, TLS_TRUSTSTORE_UPDATED_FILE,
             TLS_TRUSTSTORE_FILE));
 
     // wait for the file change event to be detected
