@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.auth;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import java.util.Collections;
 import java.util.HashMap;
@@ -71,8 +70,8 @@ public class BasicAuthTest {
         .hasPermission("write"));
 
     Assert.assertEquals(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
-        ImmutableSet.of("read"), Map.of("myTable", ImmutableList.of("cityID > 100")))
-        .getRLSFilters("myTable"), Optional.of(ImmutableList.of("cityID > 100")));
+        ImmutableSet.of("read"), Map.of("myTable", List.of("cityID > 100")))
+        .getRLSFilters("myTable"), Optional.of(List.of("cityID > 100")));
   }
 
   @Test
