@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.segment.processing.framework;
 
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
@@ -260,7 +259,7 @@ public class SegmentProcessorFrameworkTest {
     SegmentProcessorConfig config =
         new SegmentProcessorConfig.Builder().setTableConfig(tableConfig).setSchema(schema).build();
     SegmentProcessorFramework framework = new SegmentProcessorFramework(config, workingDir,
-        ImmutableList.of(recordReaderFileConfig), Collections.emptyList(), null);
+        List.of(recordReaderFileConfig), Collections.emptyList(), null);
     List<File> outputSegments = framework.process();
     assertEquals(outputSegments.size(), 1);
     ImmutableSegment segment = ImmutableSegmentLoader.load(outputSegments.get(0), ReadMode.mmap);
@@ -781,7 +780,7 @@ public class SegmentProcessorFrameworkTest {
     config = new SegmentProcessorConfig.Builder().setTableConfig(tableConfig).setSchema(schema).build();
 
     SegmentProcessorFramework frameworkWithRecordReaderFileConfig =
-        new SegmentProcessorFramework(config, workingDir, ImmutableList.of(recordReaderFileConfig),
+        new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
             Collections.emptyList(), null);
     outputSegments = frameworkWithRecordReaderFileConfig.process();
 
@@ -804,7 +803,7 @@ public class SegmentProcessorFrameworkTest {
     // Pass the recordReader to RecordReaderFileConfig.
     recordReaderFileConfig = new RecordReaderFileConfig(recordReader);
     SegmentProcessorFramework frameworkWithDelegateRecordReader =
-        new SegmentProcessorFramework(config, workingDir, ImmutableList.of(recordReaderFileConfig),
+        new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
             Collections.emptyList(), null);
     outputSegments = frameworkWithDelegateRecordReader.process();
 
@@ -830,7 +829,7 @@ public class SegmentProcessorFrameworkTest {
         .setSchema(schema).build();
 
     frameworkWithRecordReaderFileConfig =
-        new SegmentProcessorFramework(config, workingDir, ImmutableList.of(recordReaderFileConfig),
+        new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
             Collections.emptyList(), null);
     outputSegments = frameworkWithRecordReaderFileConfig.process();
 
@@ -853,7 +852,7 @@ public class SegmentProcessorFrameworkTest {
     // Pass the recordReader to RecordReaderFileConfig.
     recordReaderFileConfig = new RecordReaderFileConfig(recordReader);
     frameworkWithDelegateRecordReader =
-        new SegmentProcessorFramework(config, workingDir, ImmutableList.of(recordReaderFileConfig),
+        new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
             Collections.emptyList(), null);
     outputSegments = frameworkWithDelegateRecordReader.process();
 
