@@ -19,7 +19,6 @@
 package org.apache.pinot.integration.tests.custom;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
@@ -77,7 +76,7 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
 
     // create avro schema
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(
+    avroSchema.setFields(List.of(
         new org.apache.avro.Schema.Field(MET_DOUBLE_SORTED,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.DOUBLE), null, null),
         // Please do not use FLOAT type in Avro schema, it is lossy.
@@ -140,7 +139,7 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
 
   @Override
   protected List<String> getNoDictionaryColumns() {
-    return ImmutableList.of(MET_DOUBLE_SORTED_NO_DIC, MET_FLOAT_SORTED_NO_DIC, MET_DOUBLE_UNSORTED_NO_DIC,
+    return List.of(MET_DOUBLE_SORTED_NO_DIC, MET_FLOAT_SORTED_NO_DIC, MET_DOUBLE_UNSORTED_NO_DIC,
         MET_FLOAT_UNSORTED_NO_DIC);
   }
 
