@@ -19,7 +19,6 @@
 package org.apache.pinot.integration.tests.custom;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.sql.Timestamp;
 import java.util.List;
@@ -466,7 +465,7 @@ public class TimestampTest extends CustomDataQueryClusterIntegrationTest {
       throws Exception {
     // create avro schema
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(
+    avroSchema.setFields(List.of(
         new Field(TIMESTAMP_BASE, create(Type.LONG), null, null),
         new Field(TIMESTAMP_HALF_DAY_AFTER, create(Type.LONG), null, null),
         new Field(TIMESTAMP_ONE_DAY_AFTER, create(Type.LONG), null, null),
