@@ -19,10 +19,8 @@
 package org.apache.pinot.plugin.minion.tasks.upsertcompaction;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -47,7 +45,6 @@ import org.apache.pinot.spi.utils.builder.TableConfigBuilder;
 import org.testng.Assert;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
-import org.testng.collections.Lists;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -105,26 +102,25 @@ public class UpsertCompactionTaskGeneratorTest {
     TableConfig offlineTableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
             .build();
-    List<PinotTaskConfig> pinotTaskConfigs = taskGenerator.generateTasks(Lists.newArrayList(offlineTableConfig));
+    List<PinotTaskConfig> pinotTaskConfigs = taskGenerator.generateTasks(List.of(offlineTableConfig));
     assertTrue(pinotTaskConfigs.isEmpty());
 
     TableConfig realtimeTableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
             .build();
-    pinotTaskConfigs = taskGenerator.generateTasks(Lists.newArrayList(realtimeTableConfig));
+    pinotTaskConfigs = taskGenerator.generateTasks(List.of(realtimeTableConfig));
     assertTrue(pinotTaskConfigs.isEmpty());
   }
 
   @Test
   public void testGenerateTasksWithNoSegments() {
-    when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(
-        Lists.newArrayList(Collections.emptyList()));
+    when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(List.of());
     when(_mockClusterInfoAccessor.getIdealState(REALTIME_TABLE_NAME)).thenReturn(
-        getIdealState(REALTIME_TABLE_NAME, Lists.newArrayList(Collections.emptyList())));
+        getIdealState(REALTIME_TABLE_NAME, List.of()));
 
     _taskGenerator.init(_mockClusterInfoAccessor);
 
-    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(Lists.newArrayList(_tableConfig));
+    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(List.of(_tableConfig));
 
     assertEquals(pinotTaskConfigs.size(), 0);
   }
@@ -134,13 +130,13 @@ public class UpsertCompactionTaskGeneratorTest {
     SegmentZKMetadata consumingSegment = new SegmentZKMetadata("testTable__0");
     consumingSegment.setStatus(CommonConstants.Segment.Realtime.Status.IN_PROGRESS);
     when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(
-        Lists.newArrayList(consumingSegment));
+        List.of(consumingSegment));
     when(_mockClusterInfoAccessor.getIdealState(REALTIME_TABLE_NAME)).thenReturn(
-        getIdealState(REALTIME_TABLE_NAME, Lists.newArrayList("testTable__0")));
+        getIdealState(REALTIME_TABLE_NAME, List.of("testTable__0")));
 
     _taskGenerator.init(_mockClusterInfoAccessor);
 
-    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(Lists.newArrayList(_tableConfig));
+    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(List.of(_tableConfig));
 
     assertEquals(pinotTaskConfigs.size(), 0);
   }
@@ -148,13 +144,13 @@ public class UpsertCompactionTaskGeneratorTest {
   @Test
   public void testGenerateTasksWithNewlyCompletedSegment() {
     when(_mockClusterInfoAccessor.getSegmentsZKMetadata(REALTIME_TABLE_NAME)).thenReturn(
-        Lists.newArrayList(_completedSegment));
+        List.of(_completedSegment));
     when(_mockClusterInfoAccessor.getIdealState(REALTIME_TABLE_NAME)).thenReturn(
-        getIdealState(REALTIME_TABLE_NAME, Lists.newArrayList(_completedSegment.getSegmentName())));
+        getIdealState(REALTIME_TABLE_NAME, List.of(_completedSegment.getSegmentName())));
 
     _taskGenerator.init(_mockClusterInfoAccessor);
 
-    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(Lists.newArrayList(_tableConfig));
+    List<PinotTaskConfig> pinotTaskConfigs = _taskGenerator.generateTasks(List.of(_tableConfig));
 
     assertEquals(pinotTaskConfigs.size(), 0);
   }
@@ -331,57 +327,57 @@ public class UpsertCompactionTaskGeneratorTest {
   @Test
   public void testUpsertCompactionTaskConfig() {
     Map<String, String> upsertCompactionTaskConfig =
-        ImmutableMap.of("bufferTimePeriod", "5d", "invalidRecordsThresholdPercent", "1", "invalidRecordsThresholdCount",
+        Map.of("bufferTimePeriod", "5d", "invalidRecordsThresholdPercent", "1", "invalidRecordsThresholdCount",
             "1");
     UpsertConfig upsertConfig = new UpsertConfig(UpsertConfig.Mode.FULL);
     upsertConfig.setSnapshot(Enablement.ENABLE);
     TableConfig tableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig)))
             .build();
 
     _taskGenerator.validateTaskConfigs(tableConfig, new Schema(), upsertCompactionTaskConfig);
 
     // test with invalidRecordsThresholdPercents as 0
-    Map<String, String> upsertCompactionTaskConfig1 = ImmutableMap.of("invalidRecordsThresholdPercent", "0");
+    Map<String, String> upsertCompactionTaskConfig1 = Map.of("invalidRecordsThresholdPercent", "0");
     TableConfig zeroPercentTableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig1)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig1)))
             .build();
     _taskGenerator.validateTaskConfigs(zeroPercentTableConfig, new Schema(), upsertCompactionTaskConfig1);
 
     // test with invalid invalidRecordsThresholdPercents as -1 and 110
-    Map<String, String> upsertCompactionTaskConfig2 = ImmutableMap.of("invalidRecordsThresholdPercent", "-1");
+    Map<String, String> upsertCompactionTaskConfig2 = Map.of("invalidRecordsThresholdPercent", "-1");
     TableConfig negativePercentTableConfig =
         new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME).setUpsertConfig(upsertConfig)
-            .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig2)))
+            .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig2)))
             .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(negativePercentTableConfig, new Schema(),
             upsertCompactionTaskConfig2));
-    Map<String, String> upsertCompactionTaskConfig3 = ImmutableMap.of("invalidRecordsThresholdPercent", "110");
+    Map<String, String> upsertCompactionTaskConfig3 = Map.of("invalidRecordsThresholdPercent", "110");
     TableConfig hundredTenPercentTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig3)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig3)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(hundredTenPercentTableConfig, new Schema(),
             upsertCompactionTaskConfig3));
 
     // test with invalid invalidRecordsThresholdCount
-    Map<String, String> upsertCompactionTaskConfig4 = ImmutableMap.of("invalidRecordsThresholdCount", "0");
+    Map<String, String> upsertCompactionTaskConfig4 = Map.of("invalidRecordsThresholdCount", "0");
     TableConfig invalidCountTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig4)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig4)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(invalidCountTableConfig, new Schema(), upsertCompactionTaskConfig4));
 
     // test without invalidRecordsThresholdPercent or invalidRecordsThresholdCount
-    Map<String, String> upsertCompactionTaskConfig5 = ImmutableMap.of("bufferTimePeriod", "5d");
+    Map<String, String> upsertCompactionTaskConfig5 = Map.of("bufferTimePeriod", "5d");
     TableConfig invalidTableConfig = new TableConfigBuilder(TableType.REALTIME).setTableName(RAW_TABLE_NAME)
         .setUpsertConfig(new UpsertConfig(UpsertConfig.Mode.FULL))
-        .setTaskConfig(new TableTaskConfig(ImmutableMap.of("UpsertCompactionTask", upsertCompactionTaskConfig5)))
+        .setTaskConfig(new TableTaskConfig(Map.of("UpsertCompactionTask", upsertCompactionTaskConfig5)))
         .build();
     Assert.assertThrows(IllegalStateException.class,
         () -> _taskGenerator.validateTaskConfigs(invalidTableConfig, new Schema(), upsertCompactionTaskConfig5));
