@@ -17,8 +17,7 @@
  * under the License.
  */
 package org.apache.pinot.query.runtime.executor;
-
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -81,7 +80,7 @@ public class OpChainSchedulerServiceTest {
     WorkerMetadata workerMetadata = new WorkerMetadata(0, Map.of(), Map.of());
     OpChainExecutionContext context =
         new OpChainExecutionContext(mailboxService, 123L, Long.MAX_VALUE, Long.MAX_VALUE, Map.of(),
-            new StageMetadata(0, ImmutableList.of(workerMetadata), Map.of()), workerMetadata, null, null,
+            new StageMetadata(0, List.of(workerMetadata), Map.of()), workerMetadata, null, null,
             true);
     return new OpChain(context, operator);
   }
