@@ -67,7 +67,7 @@ public class BlockExchangeTest {
   public void shouldSendEosBlockToAllDestinations()
       throws Exception {
     // Given:
-    List<SendingMailbox> destinations = ImmutableList.of(_mailbox1, _mailbox2);
+    List<SendingMailbox> destinations = List.of(_mailbox1, _mailbox2);
     BlockExchange exchange = new TestBlockExchange(destinations);
 
     // When:
@@ -89,7 +89,7 @@ public class BlockExchangeTest {
   public void shouldSendDataBlocksOnlyToTargetDestination()
       throws Exception {
     // Given:
-    List<SendingMailbox> destinations = ImmutableList.of(_mailbox1);
+    List<SendingMailbox> destinations = List.of(_mailbox1);
     BlockExchange exchange = new TestBlockExchange(destinations);
     RowHeapDataBlock block = new RowHeapDataBlock(ImmutableList.of(new Object[]{"val"}),
         new DataSchema(new String[]{"foo"}, new ColumnDataType[]{ColumnDataType.STRING}));
@@ -111,7 +111,7 @@ public class BlockExchangeTest {
   public void shouldSignalEarlyTerminationProperly()
       throws Exception {
     // Given:
-    List<SendingMailbox> destinations = ImmutableList.of(_mailbox1, _mailbox2);
+    List<SendingMailbox> destinations = List.of(_mailbox1, _mailbox2);
     BlockExchange exchange = new TestBlockExchange(destinations);
     RowHeapDataBlock block = new RowHeapDataBlock(ImmutableList.of(new Object[]{"val"}),
         new DataSchema(new String[]{"foo"}, new ColumnDataType[]{ColumnDataType.STRING}));
@@ -142,18 +142,18 @@ public class BlockExchangeTest {
   public void shouldSplitBlocks()
       throws Exception {
     // Given:
-    List<SendingMailbox> destinations = ImmutableList.of(_mailbox1);
+    List<SendingMailbox> destinations = List.of(_mailbox1);
 
     DataSchema schema = new DataSchema(new String[]{"foo"}, new ColumnDataType[]{ColumnDataType.STRING});
 
     RowHeapDataBlock inBlock =
-        new RowHeapDataBlock(ImmutableList.of(new Object[]{"one"}, new Object[]{"two"}), schema);
+        new RowHeapDataBlock(List.of(new Object[]{"one"}, new Object[]{"two"}), schema);
 
     RowHeapDataBlock outBlockOne = new RowHeapDataBlock(ImmutableList.of(new Object[]{"one"}), schema);
 
     RowHeapDataBlock outBlockTwo = new RowHeapDataBlock(ImmutableList.of(new Object[]{"two"}), schema);
 
-    BlockSplitter blockSplitter = (block, maxSize) -> ImmutableList.of(outBlockOne, outBlockTwo).iterator();
+    BlockSplitter blockSplitter = (block, maxSize) -> List.of(outBlockOne, outBlockTwo).iterator();
     BlockExchange exchange = new TestBlockExchange(destinations, blockSplitter);
 
     // When:
